Add coin & news Page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,5 +5,7 @@
   "TITLE_CURRENCY": "Devise",
   "MENU_TITLE": "Menu",
   "MENU_HOME": "Accueil",
-  "MENU_SETTINGS": "Options"
+  "MENU_SETTINGS": "Options",
+  "CRYPTO_NEWS": "Crypto-News",
+  "UPCOMING_COIN": "Upcoming-Coin"
 }
