--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,7 @@
   "TITLE_CURRENCY": "Currency",
   "MENU_TITLE": "Menu",
   "MENU_HOME": "Home",
-  "MENU_SETTINGS": "Settings"
+  "MENU_SETTINGS": "Settings",
+  "CRYPTO_NEWS": "Crypto-News",
+  "UPCOMING_COIN": "Upcoming-Coin"
 }
