--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,5 +7,6 @@
   "MENU_HOME": "Home",
   "MENU_SETTINGS": "Settings",
   "CRYPTO_NEWS": "Crypto-News",
-  "UPCOMING_COIN": "Upcoming-Coin"
+  "UPCOMING_COIN": "Upcoming-Coin",
+  "FAVOURITE_COIN": "Favourite Coin"
 }
