--- a/www/assets/i18n/fr.json
+++ b/www/assets/i18n/fr.json
@@ -7,5 +7,6 @@
   "MENU_HOME": "Accueil",
   "MENU_SETTINGS": "Options",
   "CRYPTO_NEWS": "Crypto-News",
-  "UPCOMING_COIN": "Upcoming-Coin"
+  "UPCOMING_COIN": "Upcoming-Coin",
+  "FAVOURITE_COIN": "Favourite Coin"
 }
